name:               th-context
version:            0.10
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-context
bug-reports:        https://github.com/seereason/th-context/issues
stability:          experimental
synopsis:           Test instance context
description:        Use these functions to decide an a not-quite naive fashion
                    whether an instance already exists that satisfies a given
                    context.  This can be used to decide whether an instance
                    needs to be generated, as in th-reify-many.
extra-source-files: test/Expand.hs

flag patched-for-trac-9262
  Description: This can be turned on if ghc-7.8 has had a patch applied to fix issue 9262
  Default: False

library
  build-depends:    base >= 4.2 && < 5, template-haskell >= 2.9, mtl, syb, containers, th-orphans >= 0.10.0, th-desugar
  ghc-options:      -Wall
  exposed-modules:  Language.Haskell.TH.Context,
                    Language.Haskell.TH.DesugarExpandType
  default-language: Haskell2010
  if flag(patched-for-trac-9262)
    cpp-options:      -DPATCHED_FOR_TRAC_9262

test-suite th-context-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  build-depends:    array,
                    base,
                    bytestring,
                    containers,
                    deepseq,
                    hspec,
                    mtl,
                    template-haskell >= 2.9,
                    text,
                    th-context,
                    th-desugar,
                    th-reify-many
  default-language: Haskell2010
  if flag(patched-for-trac-9262)
    cpp-options:      -DPATCHED_FOR_TRAC_9262

source-repository head
  type:     git
  location: git://github.com/seereason/th-context.git
