name:               th-context
version:            0.17
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-context
bug-reports:        https://github.com/seereason/th-context/issues
stability:          experimental
synopsis:           Test instance context
description:        Use these functions to decide an a not-quite naive fashion
                    whether an instance already exists that satisfies a given
                    context.  This can be used to decide whether an instance
                    needs to be generated, as in th-reify-many.  Known limitation:
                    the instances inserted into the InstMap are not fully recognized
                    when computing the context.
extra-source-files: test/Common.hs test/Context.hs test/Tests.hs test/Values.hs

flag local-th-typegraph
  Description: Link to local source repo for the th-typegraph package
  Default: False
  Manual: True

library
  hs-source-dirs: .
  build-depends:
    base >= 4.8 && < 5,
    containers,
    data-default,
    haskell-src-exts,
    lens,
    mtl,
    syb,
    template-haskell >= 2.10,
    th-desugar,
    th-orphans >= 0.10.0
  ghc-options:      -Wall
  exposed-modules:  Language.Haskell.TH.Context,
                    Language.Haskell.TH.Context.Reify,
                    Language.Haskell.TH.Context.Simple
  default-language: Haskell2010
  if flag(local-th-typegraph)
    hs-source-dirs: th-typegraph
    build-depends: set-extra
    exposed-modules:
      Language.Haskell.TH.TypeGraph.Edges
      Language.Haskell.TH.TypeGraph.Expand
      Language.Haskell.TH.TypeGraph.Free
      Language.Haskell.TH.TypeGraph.Graph
      Language.Haskell.TH.TypeGraph.Info
      Language.Haskell.TH.TypeGraph.Prelude
      Language.Haskell.TH.TypeGraph.Shape
      Language.Haskell.TH.TypeGraph.Stack
      Language.Haskell.TH.TypeGraph.Unsafe
      Language.Haskell.TH.TypeGraph.Vertex
  else
    build-depends: th-typegraph >= 0.21

test-suite th-context-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  build-depends:    array, base, bytestring, containers, deepseq, ghc-prim,
                    hspec, hspec-core, lens, mtl, syb, template-haskell, text,
                    th-context, th-desugar, th-orphans, th-reify-many
  default-language: Haskell2010
  if !flag(local-th-typegraph)
    build-depends: th-typegraph >= 0.21

source-repository head
  type:     git
  location: git://github.com/seereason/th-context.git
