name:               th-context
version:            0.23
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Template Haskell
author:             David Fox
copyright:          (c) David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-context
bug-reports:        https://github.com/seereason/th-context/issues
stability:          experimental
synopsis:           Test instance context
description:        Use these functions to decide an a not-quite naive fashion
                    whether an instance already exists that satisfies a given
                    context.  This can be used to decide whether an instance
                    needs to be generated, as in th-reify-many.  Known limitation:
                    the instances inserted into the InstMap are not fully recognized
                    when computing the context.
extra-source-files: test/Common.hs test/Context.hs test/Tests.hs test/Values.hs

flag local-th-typegraph
  Description: flag
  Default: False
  Manual: True

Library
  hs-source-dirs: .
  build-depends:
    base >= 4.8 && < 5,
    containers,
    data-default,
    haskell-src-exts,
    lens,
    mtl,
    syb,
    template-haskell >= 2.10,
    th-desugar,
    th-orphans >= 0.10.0
  ghc-options:      -Wall -O2
  exposed-modules:  Language.Haskell.TH.Context
  default-language: Haskell2010
  if flag(local-th-typegraph)
    Hs-Source-Dirs: ../th-typegraph, ../mtl-unleashed
    Build-Depends: set-extra
    Exposed-Modules:
      Language.Haskell.TH.TypeGraph.Arity
      Language.Haskell.TH.TypeGraph.Edges
      Language.Haskell.TH.TypeGraph.Expand
      Language.Haskell.TH.TypeGraph.Free
      Language.Haskell.TH.TypeGraph.Lens
      Language.Haskell.TH.TypeGraph.Prelude
      Language.Haskell.TH.TypeGraph.Shape
      Language.Haskell.TH.TypeGraph.Stack
      Language.Haskell.TH.TypeGraph.TypeGraph
      Language.Haskell.TH.TypeGraph.TypeInfo
      Language.Haskell.TH.TypeGraph.Vertex
      Control.Monad.Readers
      Control.Monad.States
  else
    Build-Depends:
      th-typegraph >= 0.31,
      mtl-unleashed >= 0.4

test-suite th-context-tests
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -O2
  hs-source-dirs:   test
  main-is:          Tests.hs
  build-depends:
    array,
    base,
    bytestring,
    containers,
    deepseq,
    ghc-prim,
    hspec,
    hspec-core,
    lens,
    mtl,
    syb,
    template-haskell,
    text,
    th-context,
    th-desugar,
    th-orphans,
    th-reify-many
  default-language: Haskell2010
  if !flag(local-th-typegraph)
    Build-Depends: mtl-unleashed

source-repository head
  type:     git
  location: git://github.com/seereason/th-context.git
